Resolve JDK path in Android tests on MacOS
GitOrigin-RevId: ee4fe8d16f42350bb9a4d5cc84b84c7d15f2b5fc